- Kafak Consumer Changes